--- a/src/main/webapp/team.html
+++ b/src/main/webapp/team.html
@@ -62,7 +62,7 @@ and open the template in the editor.
                   <div class="h-full flex items-center border-gray-800 border p-4 rounded-lg">
                     <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="https://dummyimage.com/88x88">
                     <div class="flex-grow">
-                      <h2 class="text-white title-font font-medium">Vaishnav Lambat</h2>
+                      <h2 class="text-white title-font font-medium">john delton</h2>
                       <p class="text-gray-600">DevOps</p>
                     </div>
                   </div>
@@ -71,7 +71,7 @@ and open the template in the editor.
                   <div class="h-full flex items-center border-gray-800 border p-4 rounded-lg">
                     <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="https://dummyimage.com/90x90">
                     <div class="flex-grow">
-                      <h2 class="text-white title-font font-medium">John Doe</h2>
+                      <h2 class="text-white title-font font-medium">vaishnav lambat</h2>
                       <p class="text-gray-600">UI Designer</p>
                     </div>
                   </div>
