--- a/src/main/webapp/contact.html
+++ b/src/main/webapp/contact.html
@@ -50,7 +50,7 @@ and open the template in the editor.
         </div>
         <div class="lg:w-1/2 px-6 mt-4 lg:mt-0">
           <h2 class="title-font font-medium text-white tracking-widest text-sm">EMAIL</h2>
-          <a class="text-blue-500 leading-relaxed">harshal123@gmail.com</a>
+          <a class="text-blue-500 leading-relaxed">vaishnavlambat@gmail.com</a>
           <h2 class="title-font font-medium text-white tracking-widest text-sm mt-4">PHONE</h2>
           <p class="leading-relaxed">123-456-7890</p>
         </div>
